fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ p {padding-top: 5px; padding-bottom: 5px; font-size: 13px;}
 .yleistietoa .anchor {font-size: 18px; font-weight: bold; padding-top: 10px; padding-bottom: 5px; color: #000; margin: 20px 0 20px 20px; display: inline-block;}
 .yleistietoa li { list-style: disc outside; margin-left: 30px;}
 
-.muistoja h1, .muistoja h2, .muistoja p, .muistoja img { margin-left: 20px;}
+.muistoja h1, .muistoja h2, .muistoja p, .muistoja img, .muistoja ul { margin-left: 20px;}
 
 .galleries h1 { background: #E7E7ED; font-weight: bold; text-align: center; padding: 3px 0 3px 0; font-size: 12px; }
 .galleries table {background: #E7E7ED; margin-top: 20px; width: 100%; }
